# syzygy

./: .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Makefile  README.md  Shakefile.hs  Tupfile  Xargo.toml  i686-syzygy.json  meson.build  meson_options.txt  notes  oldmakefile  rust-toolchain.toml  shell.nix  todo
.github/workflows/: main.yml
boot/: grub.cfg  limine.cfg
cfg/: aarch64.cfg  shake.cfg
conf/: bochsrc
initramfs/: CMakeLists.txt  Cargo.toml  meson.build
initramfs/src/: lib.rs
kernel/: CMakeLists.txt  Cargo.toml  Makefile  build.rs  meson.build
kernel/link/: aarch64.ld  x86_64.ld
kernel/src/: arch.rs  constants.rs  consts.rs  lib.rs  log.rs  panic.rs  sym.rs  sync.rs  vga_text.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64/: boot.asm  cpuid.rs  gdt.rs  linker.ld  mod.rs  multiboot_header.asm  port.rs  process.rs  register.rs  ring.rs  task.rs
kernel/src/arch/x86_64/driver/: bochs_debug.rs  mod.rs  serial.rs
kernel/src/arch/x86_64/interrupt/: apic.rs  exception.rs  idt.rs  irq.rs  mod.rs  pic.rs
kernel/src/arch/x86_64/interrupt/apic/: mod.rs  timer.rs
kernel/src/arch/x86_64/interrupt/timer/: mod.rs
kernel/src/arch/x86_common/: grub.cfg  stack.asm
kernel/src/boot/: mod.rs
kernel/src/boot/arch/: mod.rs
kernel/src/boot/arch/x86_64/: boot.asm  check.asm  mod.rs  multiboot_header.asm  stivale2.rs
kernel/src/boot/arch/x86_64/stivale2/: info.rs  mod.rs
kernel/src/driver/: mod.rs
kernel/src/driver/acpi/: hpet.rs  mod.rs  rsdt.rs
kernel/src/err/: mod.rs  panic.rs
kernel/src/int/: exception.rs  isr.rs  mod.rs
kernel/src/int/arch/: mod.rs
kernel/src/int/arch/x86_64/: handler.rs  idt.rs  mod.rs
kernel/src/integration_tests/: mod.rs
kernel/src/io/: mod.rs
kernel/src/io/arch/x86_64/: port.rs
kernel/src/io/log/: logger.rs  mod.rs  vga_text.rs
kernel/src/io/log/arch/x86_64/: e9.rs  mod.rs
kernel/src/log/: mod.rs  vga_text.rs
kernel/src/mem/: map.rs  mod.rs  region.rs  types.rs
kernel/src/mem/arch/x86_64/: gdt.rs  mod.rs
kernel/src/mem/heap/: ll.rs  mod.rs  test.rs
kernel/src/mem/paging/: mod.rs
kernel/src/mem/paging/arch/x86_64/: mod.rs
kernel/src/mem/phys/: mod.rs
kernel/src/mem/phys/alloc/: bitmap.rs  mod.rs
kernel/src/mem/phys/arch/x86_64/: mod.rs
kernel/src/mem/virt/: mod.rs  region.rs
kernel/src/mem/virt/arch/: mod.rs
kernel/src/mem/virt/arch/x86_64/: mod.rs  table.rs
kernel/src/memory/: bitmap_frame_allocator.rs  heap.rs  mod.rs  phys.rs  region.rs
kernel/src/memory/alloc/: bump_allocator.rs  mod.rs
kernel/src/memory/frame_allocator/: bitmap_frame_allocator.rs  mod.rs
kernel/src/memory/heap/: bump_allocator.rs  mod.rs
kernel/src/memory/paging/: mapper.rs  mod.rs  table.rs  temp_page.rs
kernel/src/memory/phys/: mod.rs
kernel/src/memory/phys/alloc/: bitmap_frame_allocator.rs  mod.rs  watermark_frame_allocator.rs
kernel/src/memory/region/: alloc.rs  mod.rs
kernel/src/sync/: mod.rs  spin.rs
kernel/src/task/: list.rs  mod.rs  scheduler.rs  task.rs
kernel/src/task/arch/: mod.rs  x86_64.rs
kernel/src/time/: mod.rs
kernel/src/time/arch/x86_64/: apic_timer.rs  mod.rs  tsc.rs
kernel/src/tree/: mod.rs
kernel/src/util/: either.rs  id.rs  mod.rs  singleton.rs
kernel/src/util/arch/x86_64/: mod.rs  register.rs
kernel/src/util/spin/: mod.rs  once_cell.rs
kernel/src/util/sync/: lock.rs  mod.rs  mutex.rs  once_cell.rs  test.rs  transform.rs
kernel/src/util/sync/mutex/: mod.rs  test.rs
kernel/src/util/sync/spin/: mod.rs  once_cell.rs  spinlock.rs  test.rs  transform.rs
kernel/src/util/sync/spin/arch/: x86_64.rs
make/: common.mk  targets.mk
scripts/: copy_with_stamp.sh  cp_stamp.sh  env.sh  make_fs.sh  regress.sh  run_bochs.sh  run_cargo.sh  shake.sh  sym.sh  vmm.py
src/: .lib.rs.rustfmt  constants.rs  lib.rs  log.rs  panic.rs  test.rs  vga_buffer.rs  vga_text.rs
src/arch/: mod.rs
src/arch/i686/: boot.asm  linker.ld  linker.ld.id  mod.rs
src/arch/x86_64/: boot.asm  linker.ld  lm_init.asm  mod.rs  port.rs  serial.rs
src/arch/x86_64/interrupt/: idt.rs  mod.rs
src/arch/x86_common/: boot.asm  header.asm  linker.ld  multiboot_header.asm  stack.asm  util.asm
src/hardware/: mod.rs  port.rs  serial.rs
src/hardware/interrupt/: exception.rs  idt.rs  mod.rs
src/integration_tests/: boot.rs  mod.rs  vga.rs
src/interrupt/: exception.rs  mod.rs
src/memory/: .sfa.rs.rustfmt  bitmap_frame_allocator.rs  fake.rs  heap.rs  mod.rs  sfa.rs  watermark_frame_allocator.rs
src/memory/alloc/: bump_allocator.rs  mod.rs
src/memory/paging/: mapper.rs  mod.rs  table.rs  temp_page.rs
targets/: aarch64-unknown-none.json  x86_64-elf.json  x86_64-pc-elf-none.json  x86_64-pc-none.json
tools/: .gitignore
tools/gdb/: Makefile  build.sh  fix.patch  remote.c
user/: Makefile
user/test/: test.asm
