[package]
name = "syzygy_kernel"
version = "0.1.0-alpha.2"
authors = ["Alex O'Brien <alex@emobrien.com>"]
edition = "2018"
license = "GPL-3.0-only"

[lib]
crate-type = ["staticlib"]

[dependencies]
log_crate = { package = "log", version = "*" }
bitflags = "*"

# All features should have corresponding Meson options.
[features]
log_vga = []
log_e9 = []
heap_validation = []
