[package]
name = "syzygy_kernel"
version = "0.1.0-alpha.2"
authors = ["Alex O'Brien <alex@emobrien.com>"]
edition = "2018"
license = "GPL-3.0-only"

[lib]
crate-type = ["staticlib"]

[dependencies]
log_crate = { package = "log", version = "^0.4.14" }
bitflags = "^1.2.1"
cfg-if = "^1.0.0"
ansi_rgb = { version = "^0.2.0", optional = true }
rgb = { version = "^0.8.27", optional = true }

# All features should have corresponding Meson options.
[features]
log_vga = []
log_e9 = ["ansi_rgb", "rgb"]
heap_validation = []
